a bit extra + todos